feat: harden application security and resilience